--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,16 @@
   font-size: 1.25em;
 }
 
+.reveal section li {
+  font-size: 1.25em;
+}
+
 .reveal section h2 {
-  font-size: 200%;
+  font-size: 2.25em;
 }
 
 .reveal section h1 {
-  font-size: 200%;
+  font-size: 2.5em;
 }
 
 .reveal section code {
